adding form validatino js

--- a/index.html
+++ b/index.html
@@ -300,64 +300,68 @@
         <form class="form flex-column">
           <div class="form-input flex">
             <i class="bi bi-person"></i>
-            <span></span>
             <input type="text" id="name" placeholder="Name" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
 
           <!-- email input -->
           <div class="form-input flex">
             <i class="bi bi-envelope"></i>
-            <span></span>
             <input type="email" id="email" placeholder="Email" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
 
           <!-- date input -->
           <div class="form-input flex">
             <i class="bi bi-calendar3"></i>
-            <span></span>
 
             <input type="date" id="date" placeholder="Date" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
 
           <!-- time input -->
           <div class="form-input flex">
             <i class="bi bi-alarm"></i>
-            <span></span>
             <input type="time" id="time" placeholder="Time" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
 
           <!-- message -->
           <div class="form-input flex">
             <i class="bi bi-chat-left-text"></i>
-            <span></span>
             <input type="text" id="message" placeholder="Message" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
 
           <!-- phone -->
           <div class="form-input flex">
             <i class="bi bi-phone"></i>
-            <span></span>
             <input type="number" id="phone" placeholder="Phone" />
             <p class="success-icon">&#x2713;</p>
             <p class="error-icon">&#x2717;</p>
-            <small>Error message</small>
+            <!-- for error message -->
+            <small></small>
           </div>
-          <button class="btn-color">Create Account</button>
+
+          <button class="btn-color">Book Now</button>
+
+          <!-- success message -->
+          <p class="form-succes"></p>
         </form>
       </div>
     </section>
