adding animation js

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div> -->
       <!-- home -->
       <section class="home flex">
-        <p class="before-title">Welcome to</p>
-        <h1 class="title">Your Coffee</h1>
+        <p class="before-title scroll-right">Welcome to</p>
+        <h1 class="title scroll-left">Your Coffee</h1>
         <p class="home-text">
           Welcome to our coffee website! We are dedicated to bringing you the
           finest, hand-roasted coffee beans from around the world. Our team of
@@ -80,8 +80,8 @@
     </header>
     <!-- about -->
     <section class="about flex" id="about">
-      <p class="before-title">Know</p>
-      <h1 class="title">About us</h1>
+      <p class="before-title scroll-right">Know</p>
+      <h1 class="title scroll-left">About us</h1>
 
       <div class="about-content flex">
         <img src="/images/coffe-cup.png" alt="coffe cup" />
@@ -101,8 +101,8 @@
 
     <!-- services -->
     <section class="services flex-column" id="services">
-      <p class="before-title">Know</p>
-      <h1 class="title">Our Services</h1>
+      <p class="before-title scroll-right">Know</p>
+      <h1 class="title scroll-left">Our Services</h1>
 
       <!-- items -->
       <div class="services-items flex">
@@ -138,8 +138,8 @@
     <!-- dicover our menu -->
     <section class="discover flex">
       <div class="discover-contents flex-column">
-        <p class="before-title">Dicover</p>
-        <h1 class="title">Our Menu</h1>
+        <p class="before-title scroll-right">Dicover</p>
+        <h1 class="title scroll-left">Our Menu</h1>
         <p class="discover-text home-text">
           Far far away, behind the word mountains, far from the countries
           Vokalia and Consonantia, there live the blind texts. Separated they
@@ -184,8 +184,8 @@
 
     <!-- menu -->
     <section class="menu flex-column" id="menu">
-      <p class="before-title">Discover</p>
-      <h1 class="title">BEST COFFEE SELLERS</h1>
+      <p class="before-title scroll-right">Discover</p>
+      <h1 class="title scroll-left">BEST COFFEE SELLERS</h1>
 
       <div class="menu-items flex">
         <div class="menu-item flex-column">
@@ -221,8 +221,8 @@
 
     <!-- Testimonials -->
     <section class="testimonials flex-column" id="customers">
-      <p class="before-title">Testimony</p>
-      <h1 class="title">customers says</h1>
+      <p class="before-title scroll-right">Testimony</p>
+      <h1 class="title scroll-left">customers says</h1>
 
       <div class="testimonials-container">
         <button class="testimonials-left">&#8672;</button>
@@ -291,8 +291,8 @@
 
     <!-- order -->
     <section class="order flex-column" id="book">
-      <p class="before-title">Now</p>
-      <h1 class="title">book a table</h1>
+      <p class="before-title scroll-right">Now</p>
+      <h1 class="title scroll-left">book a table</h1>
 
       <div class="order-container flex">
         <img src="/images/table.png" alt="table in coffe shop" />
