adding overflow hidden

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div> -->
       <!-- home -->
       <section class="home flex">
-        <p class="before-title scroll-right">Welcome to</p>
-        <h1 class="title scroll-left">Your Coffee</h1>
+        <p class="before-title">Welcome to</p>
+        <h1 class="title">Your Coffee</h1>
         <p class="home-text">
           Welcome to our coffee website! We are dedicated to bringing you the
           finest, hand-roasted coffee beans from around the world. Our team of
