--- a/index.html
+++ b/index.html
@@ -51,21 +51,22 @@
         <a href="#menu">Menu</a>
         <a href="#customers">Customers</a>
       </div> -->
-      <!-- home -->
-      <section class="home flex">
-        <p class="before-title">Welcome to</p>
-        <h1 class="title">Your Coffee</h1>
-        <p class="home-text">
-          Welcome to our coffee website! We are dedicated to bringing you the
-          finest, hand-roasted coffee beans from around the world. Our team of
-          coffee aficionados has tasted and tested countless beans to curate a
-          selection of exceptional flavors for you to enjoy.
-        </p>
-        <div class="home-btns flex">
-          <a href="#book" class="btn-white order-btn">Order Now</a>
-          <a href="#menu" class="btn-color menu-btn">View Menu</a>
-        </div>
-        <!-- <div class="home-circles flex">
+    </header>
+    <!-- home -->
+    <section class="home flex">
+      <p class="before-title">Welcome to</p>
+      <h1 class="title">Your Coffee</h1>
+      <p class="home-text">
+        Welcome to our coffee website! We are dedicated to bringing you the
+        finest, hand-roasted coffee beans from around the world. Our team of
+        coffee aficionados has tasted and tested countless beans to curate a
+        selection of exceptional flavors for you to enjoy.
+      </p>
+      <div class="home-btns flex">
+        <a href="#book" class="btn-white order-btn">Order Now</a>
+        <a href="#menu" class="btn-color menu-btn">View Menu</a>
+      </div>
+      <!-- <div class="home-circles flex">
           <div>
             <span></span>
           </div>
@@ -76,8 +77,8 @@
             <span></span>
           </div>
         </div> -->
-      </section>
-    </header>
+    </section>
+
     <!-- about -->
     <section class="about flex" id="about">
       <p class="before-title scroll-right">Know</p>
@@ -415,6 +416,6 @@
       <p>Copyright ©2023 All rights reserved</p>
     </footer>
 
-    <script src="js/main.js" />
+    <script src="js/main.js"></script>
   </body>
 </html>
